ready for stoplight

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <elements-api
-      apiDescriptionUrl="webapi.oas.json"
+      apiDescriptionUrl="reference/webapi.oas.json"
       router="hash"
       layout="sidebar"
     />
